Changes in Version 0.10.2
  - Added 'threshold' argument to getmatrix()
  - Adjusting p-values is now done by default only for the tested p-values. This means that the number of tests is assumed to be the number of parameters of interest (matrices that are to be pruned), not the total number of parameters. Previous behavior can be reproduced with mode = "all" in prune(..).

Changes in Version 0.10.1
  - Fixed a bug in 'prune' which did not allow intercept/mean vectors to be pruned

Changes in Version 0.10
  - ml_tsdlvm1 now orders data by idvar if beepvar is not supplied.
  - Added 'CIplot' function
  - Standardizing in ts_dlvm1 is now more stable.
  - dlvm1 now uses observed variable names as latent variable names when appropriate.
  - Fixed a bug with the beepvar argument in psychonetrics

Changes in Version 0.9:
  - Changed 'rel.tol=1e-10' in the nlminb optimizer to be in line with lavaan
  - Added 'warn_improper' argument to runmodel(..)
  - The argument 'return_improper' now defaults to TRUE
  - Optimizer no longer uses a spectral shift when inverting a semi-positive definite matrix
  - Detection of non positive definite matrices is now done faster and should lead to less problems
  - Added the 'bounded' argument to runmodel() to define if bounded estimation should be used (defaults to TRUE)
  - Diagonals of symmetrical matrices can no longer be estimated to be negative (avoiding Heywood cases, although doing this with a Cholesky decomposition is nicer!)
  
Changes in Version 0.8.1:
  - The nlminb estimator now uses more iterations.

Changes in Version 0.8:
  - The log determinant is now computer better to be able to include fit measures at higher model complexities
  - The 'return_improper' argument in runmodel( ) now returns improper estimates without trying different starting values
  - Fixed a bug in meta_varcov when using individual estimates of the sampling variation
  - Updated optimizer default control parameters

Changes in version 0.7.6: